--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,11 +1,5 @@
-/* normalize.css v2.1.1 | MIT License | git.io/normalize */
-/* ==========================================================================
-   HTML5 display definitions
-   ========================================================================== */
-/**
- * Correct `block` display not defined in IE 8/9.
- */
-/* line 22, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+/*! normalize.css v1.1.0 | MIT License | git.io/normalize */
+/*! normalize.css v1.1.0 | HTML5 Display Definitions | MIT License | git.io/normalize */
 article,
 aside,
 details,
@@ -21,185 +15,150 @@ summary {
   display: block;
 }
 
-/**
- * Correct `inline-block` display not defined in IE 8/9.
- */
-/* line 32, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 audio,
 canvas,
 video {
   display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
 
-/**
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-/* line 41, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
-/**
- * Address styling not present in IE 8/9.
- */
-/* line 50, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 [hidden] {
   display: none;
 }
 
-/* ==========================================================================
-   Base
-   ========================================================================== */
-/**
- * 1. Prevent system color scheme's background color being used in Firefox, IE,
- *    and Opera.
- * 2. Prevent system color scheme's text color being used in Firefox, IE, and
- *    Opera.
- * 3. Set default font family to sans-serif.
- * 4. Prevent iOS text size adjust after orientation change, without disabling
- *    user zoom.
- */
-/* line 68, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+/*! normalize.css v1.1.0 | Base | MIT License | git.io/normalize */
 html {
-  background: #fff;
-  /* 1 */
-  color: #000;
-  /* 2 */
+  font-size: 100%;
   font-family: sans-serif;
-  /* 3 */
-  -ms-text-size-adjust: 100%;
-  /* 4 */
   -webkit-text-size-adjust: 100%;
-  /* 4 */
+  -ms-text-size-adjust: 100%;
 }
 
-/**
- * Remove default margin.
- */
-/* line 80, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+html,
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif;
+}
+
 body {
   margin: 0;
 }
 
-/* ==========================================================================
-   Links
-   ========================================================================== */
-/**
- * Address `outline` inconsistency between Chrome and other browsers.
- */
-/* line 92, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+/*! normalize.css v1.1.0 | Links | MIT License | git.io/normalize */
 a:focus {
   outline: thin dotted;
 }
 
-/**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
-/* line 101, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 a:active,
 a:hover {
   outline: 0;
 }
 
-/* ==========================================================================
-   Typography
-   ========================================================================== */
-/**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 114, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+/*! normalize.css v1.1.0 | Typography | MIT License | git.io/normalize */
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-/**
- * Address styling not present in IE 8/9, Safari 5, and Chrome.
- */
-/* line 123, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+h2 {
+  font-size: 1.5em;
+  margin: 0.83em 0;
+}
+
+h3 {
+  font-size: 1.17em;
+  margin: 1em 0;
+}
+
+h4 {
+  font-size: 1em;
+  margin: 1.33em 0;
+}
+
+h5 {
+  font-size: 0.83em;
+  margin: 1.67em 0;
+}
+
+h6 {
+  font-size: 0.67em;
+  margin: 2.33em 0;
+}
+
 abbr[title] {
   border-bottom: 1px dotted;
 }
 
-/**
- * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 132, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 b,
 strong {
   font-weight: bold;
 }
 
-/**
- * Address styling not present in Safari 5 and Chrome.
- */
-/* line 140, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+blockquote {
+  margin: 1em 40px;
+}
+
 dfn {
   font-style: italic;
 }
 
-/**
- * Address differences between Firefox and other browsers.
- */
-/* line 148, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
 
-/**
- * Address styling not present in IE 8/9.
- */
-/* line 158, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 mark {
   background: #ff0;
   color: #000;
 }
 
-/**
- * Correct font family set oddly in Safari 5 and Chrome.
- */
-/* line 170, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+p,
+pre {
+  margin: 1em 0;
+}
+
 code,
 kbd,
 pre,
 samp {
   font-family: monospace, serif;
+  _font-family: 'courier new', monospace;
   font-size: 1em;
 }
 
-/**
- * Improve readability of pre-formatted text in all browsers.
- */
-/* line 179, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 pre {
+  white-space: pre;
   white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
-/**
- * Set consistent quote types.
- */
-/* line 187, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 q {
   quotes: "\201C" "\201D" "\2018" "\2019";
 }
 
-/**
- * Address inconsistent and variable font size in all browsers.
- */
-/* line 195, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+q {
+  quotes: none;
+}
+
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
 small {
   font-size: 80%;
 }
 
-/**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
-/* line 204, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -208,206 +167,142 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 211, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 215, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 sub {
   bottom: -0.25em;
 }
 
-/* ==========================================================================
-   Embedded content
-   ========================================================================== */
-/**
- * Remove border when inside `a` element in IE 8/9.
- */
-/* line 227, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
-img {
-  border: 0;
+dl,
+menu,
+ol,
+ul {
+  margin: 1em 0;
 }
 
-/**
- * Correct overflow displayed oddly in IE 9.
- */
-/* line 235, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+dd {
+  margin: 0 0 0 40px;
+}
+
+menu,
+ol,
+ul {
+  padding: 0 0 0 40px;
+}
+
+nav ul,
+nav ol {
+  list-style: none;
+  list-style-image: none;
+}
+
+/*! normalize.css v1.1.0 | Embedded Content | MIT License | git.io/normalize */
+img {
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+}
+
 svg:not(:root) {
   overflow: hidden;
 }
 
-/* ==========================================================================
-   Figures
-   ========================================================================== */
-/**
- * Address margin not present in IE 8/9 and Safari 5.
- */
-/* line 247, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+/*! normalize.css v1.1.0 | Figures | MIT License | git.io/normalize */
 figure {
   margin: 0;
 }
 
-/* ==========================================================================
-   Forms
-   ========================================================================== */
-/**
- * Define consistent border, margin, and padding.
- */
-/* line 259, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+/*! normalize.css v1.1.0 | Forms | MIT License | git.io/normalize */
+form {
+  margin: 0;
+}
+
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
 
-/**
- * 1. Correct `color` not being inherited in IE 8/9.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
-/* line 270, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 legend {
   border: 0;
-  /* 1 */
   padding: 0;
-  /* 2 */
+  white-space: normal;
+  *margin-left: -7px;
 }
 
-/**
- * 1. Correct font family not being inherited in all browsers.
- * 2. Correct font size not being inherited in all browsers.
- * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 284, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 button,
 input,
 select,
 textarea {
   font-family: inherit;
-  /* 1 */
   font-size: 100%;
-  /* 2 */
   margin: 0;
-  /* 3 */
+  vertical-align: baseline;
+  *vertical-align: middle;
 }
 
-/**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-/* line 296, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 button,
 input {
   line-height: normal;
 }
 
-/**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
- * Correct `select` style inheritance in Firefox 4+ and Opera.
- */
-/* line 308, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 button,
 select {
   text-transform: none;
 }
 
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- */
-/* line 323, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
-  /* 2 */
   cursor: pointer;
-  /* 3 */
+  *overflow: visible;
 }
 
-/**
- * Re-set default cursor for disabled elements.
- */
-/* line 333, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 button[disabled],
 html input[disabled] {
   cursor: default;
 }
 
-/**
- * 1. Address box sizing set to `content-box` in IE 8/9.
- * 2. Remove excess padding in IE 8/9.
- */
-/* line 343, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
-  /* 1 */
   padding: 0;
-  /* 2 */
+  *height: 13px;
+  *width: 13px;
 }
 
-/**
- * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
- *    (include `-moz` to future-proof).
- */
-/* line 354, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
-  /* 1 */
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
-  /* 2 */
   box-sizing: content-box;
 }
 
-/**
- * Remove inner padding and search cancel button in Safari 5 and Chrome
- * on OS X.
- */
-/* line 367, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/**
- * Remove inner padding and border in Firefox 4+.
- */
-/* line 376, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
 
-/**
- * 1. Remove default vertical scrollbar in IE 8/9.
- * 2. Improve readability and alignment in all browsers.
- */
-/* line 386, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
 textarea {
   overflow: auto;
-  /* 1 */
   vertical-align: top;
-  /* 2 */
 }
 
-/* ==========================================================================
-   Tables
-   ========================================================================== */
-/**
- * Remove most spacing between table cells.
- */
-/* line 399, ../../../../../fire.app/lib/ruby/compass_extensions/zurb-foundation-4.1.5/scss/normalize.scss */
+/*! normalize.css v1.1.0 | Tables | MIT License | git.io/normalize */
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+.svg {
+  color: green;
 }
